deploy: 5121804f77097cdd8bd6ec953e9c854b70fbf661

--- a/src/runtime_eden/lib.rs.html
+++ b/src/runtime_eden/lib.rs.html
@@ -613,7 +613,7 @@
 		DmpQueue: cumulus_pallet_dmp_queue = <span class="number">33</span>,
 		XcmpQueue: cumulus_pallet_xcmp_queue::{Pallet, Call, Storage, Event&lt;T&gt;} = <span class="number">34</span>,
 		PolkadotXcm: pallet_xcm::{Pallet, Call, Storage, Event&lt;T&gt;, Origin, Config} = <span class="number">35</span>,
-
+		XTokens: orml_xtokens::{Pallet, Call, Storage, Event&lt;T&gt;} = <span class="number">36</span>,
 		<span class="comment">// Neat things
 		</span>Utility: pallet_utility = <span class="number">40</span>,
 		Multisig: pallet_multisig = <span class="number">41</span>,
