deploy: e4ab801b59725dd44aedb3616c2bbb823e2b5a9e

--- a/src/nodle_parachain/service.rs.html
+++ b/src/nodle_parachain/service.rs.html
@@ -509,7 +509,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
  */
-
+</span><span class="attribute">#![allow(clippy::type_complexity)]
 </span><span class="doccomment">//! Service and ServiceFactory implementation. Specialized wrapper over substrate service.
 
 </span><span class="comment">// std
