--- a/nodle_parachain/chain_spec/fn.eden_testnet_genesis.html
+++ b/nodle_parachain/chain_spec/fn.eden_testnet_genesis.html
@@ -3,5 +3,5 @@
     collators: <a class="struct" href="https://doc.rust-lang.org/1.70.0/alloc/vec/struct.Vec.html" title="struct alloc::vec::Vec">Vec</a>&lt;(<a class="type" href="../service/type.AccountId.html" title="type nodle_parachain::service::AccountId">AccountId</a>, AuraId)&gt;,
     endowed_accounts: <a class="enum" href="https://doc.rust-lang.org/1.70.0/core/option/enum.Option.html" title="enum core::option::Option">Option</a>&lt;<a class="struct" href="https://doc.rust-lang.org/1.70.0/alloc/vec/struct.Vec.html" title="struct alloc::vec::Vec">Vec</a>&lt;<a class="type" href="../service/type.AccountId.html" title="type nodle_parachain::service::AccountId">AccountId</a>&gt;&gt;,
     id: ParaId
-) -&gt; GenesisConfig</code></pre><details class="toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Helper function to create GenesisConfig for testing</p>
+) -&gt; <a class="struct" href="../../runtime_eden/struct.GenesisConfig.html" title="struct runtime_eden::GenesisConfig">GenesisConfig</a></code></pre><details class="toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Helper function to create GenesisConfig for testing</p>
 </div></details></section></div></main></body></html>
