deploy: a4f6c42f0833060d268c866bccd4c67cc8ac2170

--- a/pallet_sponsorship/pallet/dispatchables/index.html
+++ b/pallet_sponsorship/pallet/dispatchables/index.html
@@ -14,7 +14,7 @@ User must be registered to be removable.
 Users receive the free balance in their proxy account back into their own accounts when
 they are removed.</div></li><li><div class="item-name"><a class="fn" href="fn.sponsor_for.html" title="fn pallet_sponsorship::pallet::dispatchables::sponsor_for">sponsor_for</a></div><div class="desc docblock-short">Sponsor me for the given call from the specified pot.
 The caller must be registered for the pot.
-The call must be consistent with the pot’s sponsorship type.</div></li><li><div class="item-name"><a class="fn" href="fn.update_pot_limits.html" title="fn pallet_sponsorship::pallet::dispatchables::update_pot_limits">update_pot_limits</a></div><div class="desc docblock-short">Update the pot details. Only the sponsor can do this. If the sponsor is lowering their
+The calls must be consistent with the pot’s sponsorship type.</div></li><li><div class="item-name"><a class="fn" href="fn.update_pot_limits.html" title="fn pallet_sponsorship::pallet::dispatchables::update_pot_limits">update_pot_limits</a></div><div class="desc docblock-short">Update the pot details. Only the sponsor can do this. If the sponsor is lowering their
 support, it can work only if the corresponding fee or reserve balance has enough
 available margin. In other words, the sponsor cannot lower the limit for the fee below
 what users have already taken from the pot. Similarly, the sponsor cannot lower the
