--- a/src/runtime_eden/lib.rs.html
+++ b/src/runtime_eden/lib.rs.html
@@ -558,6 +558,9 @@
 <a href="#558" id="558">558</a>
 <a href="#559" id="559">559</a>
 <a href="#560" id="560">560</a>
+<a href="#561" id="561">561</a>
+<a href="#562" id="562">562</a>
+<a href="#563" id="563">563</a>
 </pre></div><pre class="rust"><code><span class="comment">/*
  * This file is part of the Nodle Chain distributed at https://github.com/NodleCode/chain
  * Copyright (C) 2020-2022  Nodle International
@@ -581,8 +584,11 @@
 </span><span class="attr">#![recursion_limit = <span class="string">"256"</span>]
 
 </span><span class="comment">// Make the WASM binary available.
-</span><span class="attr">#[cfg(feature = <span class="string">"std"</span>)]
+</span><span class="attr">#[cfg(all(feature = <span class="string">"std"</span>, not(feature = <span class="string">"metadata-hash"</span>)))]
 </span><span class="macro">include!</span>(<span class="macro">concat!</span>(<span class="macro">env!</span>(<span class="string">"OUT_DIR"</span>), <span class="string">"/wasm_binary.rs"</span>));
+<span class="attr">#[cfg(all(feature = <span class="string">"std"</span>, feature = <span class="string">"metadata-hash"</span>))]
+#[cfg(feature = <span class="string">"std"</span>)]
+</span><span class="macro">include!</span>(<span class="macro">concat!</span>(<span class="macro">env!</span>(<span class="string">"OUT_DIR"</span>), <span class="string">"/wasm_binary_dev.rs"</span>));
 
 <span class="doccomment">/// Wasm binary unwrapped. If built with `SKIP_WASM_BUILD`, the function panics.
 </span><span class="attr">#[cfg(feature = <span class="string">"std"</span>)]
